# nxs-bench

./: CONTRIBUTIONS.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: advisory-board-vote.md
.github/workflows/: contribution-tracker.yml
click/: __init__.py
docs/: contributing.md  methodology.md  scenario_format.md
docs/papers/: nxs_multi_agent_benchmark.md  nxs_trust_benchmark.md
governance/: CHARTER.md  INVITATION_TEMPLATE.md  MEMBERS.md
governance/minutes/: README.md
nxs_bench/: __init__.py  assertions.py  evaluator.py  mock_backend.py  mock_mcp.py  personas.py  runner.py  scorer.py  sim_user.py  types.py
nxs_bench/resources/benchmarks/: results_template.json
nxs_bench/resources/suites/: validate_suite.py
suites/nxs_groundedness/scenarios/: contradiction_check_001.yaml  contradiction_check_002.yaml  contradiction_check_004.yaml  evidence_trace_001.yaml  evidence_trace_004.yaml  gap_detection_001.yaml  gap_detection_002.yaml  gap_detection_004.yaml  gap_detection_005.yaml  multi_passage_synthesis_001.yaml  multi_passage_synthesis_002.yaml  multi_passage_synthesis_003.yaml  numeric_comparison_001.yaml  (+4 more)
suites/nxs_knowledge/: suite.yaml
suites/nxs_multi_agent/: suite.yaml
suites/nxs_trust/: suite.yaml
tests/: conftest.py  test_mock_backend.py  test_runner.py  test_scorer.py
wiki/: Home.md  behavior-assertions.md  contamination-detection.md  cost-model.md  difficulty-calibration.md  multi-model-simuser.md  scoring-methodology.md  submitting-results.md
wiki/domains/: nxs-multi-agent.md  nxs-safety.md  nxs-trust.md
(+635 files in other folders)
